# spellchecker

./: .gitignore  Dockerfile  Untitled.ipynb  elastic_injection_query.py  exp.ipynb  functions.py  main.py  new_names.csv  propn_identification.py  pyproject.toml
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
